--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+hr {
+    @apply border-black border-t border-dashed;
+}
